--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "css-loader": "^1.0.0",
     "del": "^3.0.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "eslint": "latest",
+    "eslint": "^5.15.3",
     "expose-loader": "^0.7.5",
     "file-loader": "^2.0.0",
     "gulp": "^4.0.0",
@@ -67,6 +67,7 @@
     "nps-utils": "^1.7.0",
     "opn": "^5.4.0",
     "prettier": "^1.16.4",
+    "signale": "^1.4.0",
     "style-loader": "^0.23.1",
     "through2": "^2.0.3",
     "url-loader": "^1.1.1",
@@ -83,9 +84,10 @@
   "scripts": {
     "start": "nps",
     "test": "nps test",
-    "postinstall": "cat ../template/init-node.js | node",
     "prettier": "prettier --config ./.prettierrc.js --write \"./src/**/*.js\"",
-    "precommit": "npm run prettier"
+    "precommit": "npm run prettier && npm run lint",
+    "lint:es": "eslint ./src --ext .js,.jsx,.json --fix",
+    "lint": "npm run lint:es"
   },
   "main": "dist/app.bundle.js",
   "gitHooks": {
