--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "aurelia-cli": "^1.0.0-beta.9",
     "aurelia-testing": "^1.0.0",
     "aurelia-tools": "^2.0.0",
@@ -31,6 +31,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "copy-webpack-plugin": "^4.5.2",
+    "core-js": "^2.6.5",
     "css-loader": "^1.0.0",
     "del": "^3.0.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
