--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "aurelia-cli": "^1.0.0-beta.9",
     "aurelia-content-loader": "0.0.5",
     "aurelia-google-recaptcha": "0.0.2",
+    "aurelia-plugins-google-recaptcha": "^2.6.1",
     "aurelia-testing": "^1.0.0",
     "aurelia-tools": "^2.0.0",
     "aurelia-webpack-plugin": "^3.0.0",
@@ -64,13 +65,11 @@
     "mini-css-extract-plugin": "^0.4.3",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.0",
-    "nanoid": "^2.0.1",
     "node-logger": "0.0.1",
     "npm-which": "^3.0.1",
     "nps": "^5.9.3",
     "nps-utils": "^1.7.0",
     "opn": "^5.4.0",
-    "parse-duration": "^0.1.1",
     "prettier": "^1.16.4",
     "signale": "^1.4.0",
     "style-loader": "^0.23.1",
