--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "aurelia-webpack-plugin": "^3.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
+    "codemirror": "^5.45.0",
     "copy-webpack-plugin": "^4.5.2",
     "core-js": "^2.6.5",
     "css-loader": "^1.0.0",
