--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amaranth-utils": "0.0.4",
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.0",
+    "aurelia-logging": "^1.5.2",
     "aurelia-polyfills": "^1.3.0",
     "bluebird": "^3.5.2",
     "bootstrap": "^4.3.1",
