--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aurelia-bootstrapper": "^2.3.0",
     "aurelia-logging": "^1.5.2",
     "aurelia-polyfills": "^1.3.0",
+    "aurelia-validation": "^1.4.0",
     "bluebird": "^3.5.2",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
